--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^9.0.0"
+    "express": "^5.2.1",
+    "express-session": "^1.18.2",
+    "http": "^0.0.1-security",
+    "mongoose": "^9.0.1",
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.1"
   }
 }
