--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.2",
     "form-data": "^4.0.5",
     "http": "^0.0.1-security",
+    "imagekit": "^6.0.0",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1"
