--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
