Deployment final stabil: Corectii MongoDB sessions, CSS curatat si EJS verificat.

--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
   "name": "car-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Aplicatie Car-App cu Node.js, Express, MongoDB, EJS si ImageKit",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.13.2",
-    "bcrypt": "^6.0.0",
-    "cloudinary": "^2.8.0",
-    "connect-mongodb-session": "^5.0.0",
-    "cors": "^2.8.5",
-    "ejs": "^3.1.10",
-    "express": "^5.2.1",
-    "express-session": "^1.18.2",
-    "form-data": "^4.0.5",
-    "http": "^0.0.1-security",
-    "imagekit": "^6.0.0",
-    "mongoose": "^9.0.1",
-    "multer": "^2.0.2",
-    "socket.io": "^4.8.1"
+    "bcrypt": "^5.1.0",
+    "connect-mongodb-session": "^3.1.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "imagekit": "^1.2.6",
+    "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
