--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "car-app",
+  "name": "car-app-project",
   "version": "1.0.0",
-  "description": "Aplicatie Car-App cu Node.js, Express, MongoDB, EJS si ImageKit",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "imagekit": "^1.2.6",
+    "http": "^0.0.1-security",
+    "imagekit": "^4.1.4",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.1", 
     "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
