--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "car-app-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "Aplicație Car-App cu login, registrare, adăugare mașini și chat",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "http": "^0.0.1-security",
-    "imagekit": "^4.1.4",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.1", 
+    "node-fetch": "^2.6.1",
     "socket.io": "^4.7.2"
   }
 }
