--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "car-app-project",
   "version": "1.0.0",
-  "description": "Aplicație Car-App cu login, registrare, adăugare mașini și chat",
+  "description": "Aplicatie de management auto si comunicare bazata pe numere de inmatriculare",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "connect-mongodb-session": "^3.1.1",
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^7.3.1",
+    "express-session": "^1.18.0",
+    "imagekit": "^4.2.0",
+    "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
