--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "5.1.1",
+    "bcrypt": "5.1.0",
+    "connect-mongodb-session": "3.1.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "express-session": "1.18.0",
-    "imagekit": "4.2.0", 
-    "mongoose": "8.1.3",
+    "express-session": "1.17.3",
+    "http": "0.0.1-security",
+    "imagekit": "4.0.0", 
+    "mongoose": "7.3.1",
     "multer": "1.4.5-lts.1",
-    "socket.io": "4.7.4"
+    "node-fetch": "2.6.1", 
+    "socket.io": "4.7.2"
   },
   "devDependencies": {
-    "nodemon": "3.0.3"
+    "nodemon": "3.0.3" 
   }
 }
