--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "express": "4.18.2",
     "express-session": "1.17.3",
     "http": "0.0.1-security",
-    "imagekit": "4.0.0", 
     "mongoose": "7.3.1",
     "multer": "1.4.5-lts.1",
     "node-fetch": "2.6.1", 
-    "socket.io": "4.7.2"
+    "socket.io": "4.7.2",
+    "url": "0.11.3"
   },
   "devDependencies": {
     "nodemon": "3.0.3" 
