--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "express-session": "1.17.3",
     "http": "0.0.1-security",
     "mongoose": "7.3.1",
-    "multer": "1.4.5-lts.1",
-    "node-fetch": "2.6.1", 
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "2.6.1",
     "socket.io": "4.7.2",
     "url": "0.11.3"
   },
   "devDependencies": {
-    "nodemon": "3.0.3" 
+    "nodemon": "3.0.3"
   }
 }
