--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "bcrypt": "5.1.0",
     "connect-mongodb-session": "3.1.1",
+    "dotenv": "^17.2.3",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "express-session": "1.17.3",
+    "express-session": "^1.17.3",
     "http": "0.0.1-security",
+    "imagekit": "^6.0.0",
     "mongoose": "7.3.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "2.6.1",
